# rust-uinput

./: Cargo.toml  README.md
examples/: hello.rs  keyboard.rs  mouse.rs
src/: error.rs  lib.rs
src/device/: builder.rs  device.rs  mod.rs
src/event/: absolute.rs  controller.rs  keyboard.rs  mod.rs  relative.rs
